--- a/UG04-1.html
+++ b/UG04-1.html
@@ -54,8 +54,16 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 ctn4-ug-04">
-            </div>
+            <div class="col-md-6 ctn2-ug-04">
+				<div class="col-12 title">
+					<h1>¿Eres un consultor?</h1>
+					<p>Comparte tu experiencia con empresa</p>
+					<p>del sector.</p>
+					<div class="col-12 btn-register">
+						<a href="">Registrate</a>
+					</div>
+				</div>
+			</div>
         </div>
     </div>
 </body>
