--- a/login.html
+++ b/login.html
@@ -19,6 +19,11 @@
 				</div>
 			</div>
 			<div class="col-md-6 ctn-2">
+				<ul class="consu-register">
+					<li>
+						<a href="login.html">Regístrate</a>
+					</li>
+				</ul>
 				<div class="ctn-2-1">
 					<form action="">
 						<h2>Login</h2>
@@ -37,10 +42,10 @@
 									<input type="submit" class="btn btn-primary" value="Ingresar">
 								</div>
 								<div class="link col-12 col-md-12 .col-lg-12">
-									<a href="">¿Olvidaste tu contraseña? Recupérala</a>
+									<a href="re-contra.html">¿Olvidaste tu contraseña? Recupérala</a>
 								</div>
 								<div class="link col-12 col-md-12 .col-lg-12">
-									<a href="">¿Aún no tienes una cuenta? Regístrate</a>
+									<a href="">¿Ya tienes cuenta? Inicia Sesión</a>
 								</div>
 						</div>
 					</form>
