--- a/MANO1.html
+++ b/MANO1.html
@@ -279,17 +279,17 @@
                                     <h6>Avence 15/12/2019</h5>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci rerum, non optio odio architecto maiores expedita fuga laboriosam. Sed voluptatum qui deleniti excepturi quia porro quisquam. Quisquam natus nostrum, magni, aut provident amet quam fuga voluptatibus, totam ducimus dolore? Autem qui quia eum laudantium laboriosam quod deleniti, incidunt ullam cum debitis hic quibusdam corrupti nam soluta vel quam, dignissimos possimus. </p>
                                 </div>
-                                <div class="col-md-3">
-                                    <img src="/img/MAN01/img1.png" alt="">
+                                <div class="col-md-3 text-center col-6">
+                                    <img class="img-fluid" src="/img/MAN01/img1.png" alt="">
                                 </div>
-                                <div class="col-md-3">
-                                    <img src="/img/MAN01/img2.png" alt="">
+                                <div class="col-md-3 text-center col-6">
+                                    <img class="img-fluid" src="/img/MAN01/img2.png" alt="">
                                 </div>
-                                <div class="col-md-3">
-                                    <img src="/img/MAN01/img3.png" alt="">
+                                <div class="col-md-3 text-center col-6">
+                                    <img class="img-fluid" src="/img/MAN01/img3.png" alt="">
                                 </div>
-                                <div class="col-md-3">
-                                    <img src="/img/MAN01/img4.png" alt="">
+                                <div class="col-md-3 text-center col-6">
+                                    <img class="img-fluid" src="/img/MAN01/img4.png" alt="">
                                 </div>
                             </div>
                         </div>
@@ -299,32 +299,24 @@
                                     <h6>Avence 15/12/2019</h5>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci rerum, non optio odio architecto maiores expedita fuga laboriosam. Sed voluptatum qui deleniti excepturi quia porro quisquam. Quisquam natus nostrum, magni, aut provident amet quam fuga voluptatibus, totam ducimus dolore? Autem qui quia eum laudantium laboriosam quod deleniti, incidunt ullam cum debitis hic quibusdam corrupti nam soluta vel quam, dignissimos possimus. </p>
                                 </div>
-                                <div class="col-md-3">
-                                    <img src="/img/MAN01/img1.png" alt="">
+                                <div class="col-md-3 text-center col-6">
+                                    <img  class="img-fluid" src="/img/MAN01/img1.png" alt="">
                                 </div>
-                                <div class="col-md-3">
-                                    <img src="/img/MAN01/img2.png" alt="">
+                                <div class="col-md-3 text-center col-6">
+                                    <img  class="img-fluid" src="/img/MAN01/img2.png" alt="">
                                 </div>
-                                <div class="col-md-3">
-                                    <img src="/img/MAN01/img3.png" alt="">
+                                <div class="col-md-3 text-center col-6">
+                                    <img  class="img-fluid" src="/img/MAN01/img3.png" alt="">
                                 </div>
-                                <div class="col-md-3">
-                                    <img src="/img/MAN01/img4.png" alt="">
+                                <div class="col-md-3 text-center col-6">
+                                    <img  class="img-fluid" src="/img/MAN01/img4.png" alt="">
                                 </div>
                             </div>
                         </div>
-                        <div class="container ">
-                            <div class="btn-modal offset-2 col-md-9">
-                                <div class="row">
-                                    <div class="col-md-4">
-                                        <a href="">Aprobado</a>
-                                    </div>
-                                    <div class="col-md-4"><a href="">Finalizado</a></div>
-                                    <div class="col-md-4">
-                                        <a href="" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg-1">Registrar avance</a>
-                                    </div>
-                                </div>
-                            </div>
+                        <div class="modal-footer man-mol text-center">
+                            <button type="button" class="btn btn-primary">Aprobado</button>
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Finalizado</button>
+                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg-1">Registrar avance</button>
                         </div>
                         <div class="modal fade bd-example-modal-lg-1" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
                             <div class="modal-dialog modal-lg">
@@ -341,9 +333,9 @@
                                                 <div class="col-md-12">
                                                     <form action="">
                                                         <div class="row">
-                                                            <div class="col-md-6">
+                                                            <div class="col-md-12">
                                                                 <h6>Estado</h5>
-                                                                    <div class="form-group">
+                                                                    <div class="form-group col-md-6">
                                                                         <select class="form-control" id="exampleFormControlSelect1">
                                                                             <option>Selecciona una opción de la lista</option>
                                                                             <option>2</option>
@@ -352,13 +344,13 @@
                                                                             <option>5</option>
                                                                         </select>
                                                                     </div>
-                                                                    <div class="form-group textarea">
-                                                                        <textarea class="l" name="textarea" rows="8" cols="100" placeholder="Ingresa tus comentarios"></textarea>
+                                                                    <div class="form-group textarea col-md-8">
+                                                                        <textarea class="l" name="textarea" rows="8" placeholder="Ingresa tus comentarios"></textarea>
                                                                     </div>
                                                             </div>
                                                         </div>
                                                         <div class="row">
-                                                            <div class="col-md-3">
+                                                            <div class="col-md-3 col-4">
                                                                 <div class="col-12 agregar-img">
                                                                     <a href=""><img src="/img/MAN01/Trazado 6010.png" alt="">
                                                                         <br>
@@ -366,7 +358,7 @@
                                                                     </a>
                                                                 </div>
                                                             </div>
-                                                            <div class="col-md-3">
+                                                            <div class="col-md-3 col-4">
                                                                 <div class="col-12 agregar-img">
                                                                     <a href=""><img src="/img/MAN01/Trazado 6010.png" alt="">
                                                                         <br>
@@ -375,7 +367,7 @@
 
                                                                 </div>
                                                             </div>
-                                                            <div class="col-md-3">
+                                                            <div class="col-md-3 col-4">
                                                                 <div class="col-12 agregar-img">
                                                                     <a href=""><img src="/img/MAN01/Trazado 6010.png" alt="">
                                                                         <br>
@@ -393,11 +385,9 @@
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div class="row offset-3 col-md-6 cerrar">
-                                                            <div class="modal-footer">
-                                                                <input class="btn btn-primary boton-crear-registro" type="submit" value="Registrar">
-                                                                <button type="button" class="btn btn-secondary boton-crear-registro" data-dismiss="modal">Cancelar</button>
-                                                            </div>
+                                                        <div class="modal-footer man-mol text-center">
+                                                                <button type="button" class="btn btn-primary">Registar</button>
+                                                            <button type="button" class="btn btn-secondary boton-crear-registro" data-dismiss="modal">Cancelar</button>
                                                         </div>
                                                     </form>
                                                 </div>
