--- a/UG04-1.html
+++ b/UG04-1.html
@@ -32,10 +32,10 @@
 									<li class="nav-item">
 											<a class="nav-link nav-bar" href="#">Home</a>
 									</li>
-									<!-- <li class="nav-item">
-											<a class="nav-link nav-bar" href="#">Iniciar sesión</a>
-									</li>
 									<li class="nav-item">
+											<a class="nav-link nav-bar" href="login.html">Iniciar sesión</a>
+									</li>
+									<!-- <li class="nav-item">
 											<a class="nav-link register" href="#">Registrate</a>
 									</li> -->
 							</ul>
@@ -50,7 +50,7 @@
                     <p>Texto Comienza tu transformación </p>
                     <p>digital de tu supervisor de campo</p>
                     <div class="col-12 btn-register">
-                        <a href="">Registrate</a>
+                        <a href="registro.html">Registrate</a>
                     </div>
                 </div>
             </div>
@@ -60,7 +60,7 @@
 					<p>Comparte tu experiencia con empresa</p>
 					<p>del sector.</p>
 					<div class="col-12 btn-register">
-						<a href="">Registrate</a>
+						<a href="registro-consul.html">Registrate</a>
 					</div>
 				</div>
 			</div>
