--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
 			<div class="col-md-6 ctn-2">
 				<ul class="consu-register">
 					<li>
-						<a href="login.html">Regístrate</a>
+						<a href="UG04-1.html">Regístrate</a>
 					</li>
 				</ul>
 				<div class="ctn-2-1">
