--- a/registro-consul.html
+++ b/registro-consul.html
@@ -291,7 +291,7 @@
 												</select>
 											</div>
 											<div class="col-md-8">
-												<input type="number" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingresa tu número celular">
+												<input type="number" class="form-control n-celular" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingresa tu número celular">
 	
 											</div>
 										</div>
