--- a/registro.html
+++ b/registro.html
@@ -49,7 +49,7 @@
 								</div>
 								<div class="ctn-2-1-1 col-md-6">
 									<div class="form-group">
-										<label for="exampleInputEmail1">Número de celular</label>
+										<label for="exampleInputEmail1" class="n-celular">Número de celular</label>
 										<div class="row">
 											<div class="col-md-4">
 												<select class="form-control" id="exampleFormControlSelect1">
@@ -291,7 +291,7 @@
 												</select>
 											</div>
 											<div class="col-md-8">
-												<input type="number" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingresa tu número celular">
+												<input type="number" class="form-control n-celular" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingresa tu número celular">
 	
 											</div>
 										</div>
