--- a/MTA01.html
+++ b/MTA01.html
@@ -70,6 +70,38 @@
             </div>
         </div>
     </div>
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h6 class="modal-title" id="exampleModalLongTitle">Reparación de cableado a poste</h5>
+                <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button> -->
+                </div>
+                <div class="modal-body">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12">
+                                <p>Inspector:  <span>Sergio Armando Alba Pinedo <a href="">Cambiar inspector</a></span></p>
+                                <p>Ubicación: <span>Ubr. Los pinos - Los olivos</span></p>
+                                <p>Coordenadas: <span> 9.0454 - 90945</span></p>
+                                <p>Fecha: <span>29/03/2019</span></p>
+                                <p>Hora: 13:03 Pm</p>
+                                <p>Nombre de plantilla: <span>Plantilla para reporte de estado</span></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer man-mol text-center">
+                    <button type="button" class="btn btn-primary"></button>
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg-5" >Editar</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="container table-responsive">
         <table class="table table-bordered table-sm ctn-table">
             <thead>
@@ -139,7 +171,7 @@
             </thead>
             <tbody>
                 <tr>
-                <td><a href="" class="links">201932644985</a></td>
+                <td><a href="" class="links" data-toggle="modal" data-target="#exampleModalCenter">201932644985</a></td>
                 <td><p>Sergio Armando
                     <br>
                      <span> Alba Pinedo</span>
@@ -149,10 +181,10 @@
                 <td>Pendiente</td>
                 <td>Feb 22, 2019</td>
                 <td class="lugar-table">Ubr Los Claveles Mz I Lote 9 - Los Naturales</td>
-                <td class="btn-editar"><a href="" class="btn-edit" data-toggle="modal" data-target=".bd-example-modal-lg" >Editar</a></td>
+                <!-- <td class="btn-editar"><a href="" class="btn-edit" data-toggle="modal" data-target=".bd-example-modal-lg-5" >Editar</a></td> -->
                 </tr>
                 <tr>
-                <td><a href="" class="links" data-toggle="modal" data-target=".bd-example-modal-lg">201932644985</a></td>
+                <td><a href="" class="links">201932644985</a></td>
                 <td><p>Sergio Armando
                     <br>
                         <span> Alba Pinedo</span>
@@ -162,10 +194,10 @@
                 <td>Pendiente</td>
                 <td>Feb 22, 2019</td>
                 <td class="lugar-table">Ubr Los Claveles Mz I Lote 9 - Los Naturales</td>
-                <td class="btn-editar"><a href="">Editar</a></td>
+                <!-- <td class="btn-editar"><a href="" class="btn-edit" data-toggle="modal" data-target=".bd-example-modal-lg" >Editar</a></td> -->
                 </tr>
                 <tr>
-                <td><a href="" class="links" data-toggle="modal" data-target=".bd-example-modal-lg">201932644985</a></td>
+                <td><a href="" class="links">201932644985</a></td>
                 <td><p>Sergio Armando
                     <br>
                         <span> Alba Pinedo</span>
@@ -175,10 +207,10 @@
                 <td>Pendiente</td>
                 <td>Feb 22, 2019</td>
                 <td class="lugar-table">Ubr Los Claveles Mz I Lote 9 - Los Naturales</td>
-                <td class="btn-editar"><a href="">Editar</a></td>
+                <!-- <td class="btn-editar"><a href="" class="btn-edit" data-toggle="modal" data-target=".bd-example-modal-lg" >Editar</a></td> -->
                 </tr>
                 <tr>
-                <td><a href="" class="links" data-toggle="modal" data-target=".bd-example-modal-lg">201932644985</a></td>
+                <td><a href="" class="links">201932644985</a></td>
                 <td><p>Sergio Armando
                     <br>
                         <span> Alba Pinedo</span>
@@ -188,10 +220,10 @@
                 <td>Pendiente</td>
                 <td>Feb 22, 2019</td>
                 <td class="lugar-table">Ubr Los Claveles Mz I Lote 9 - Los Naturales</td>
-                <td class="btn-editar"><a href="">Editar</a></td>
+                <!-- <td class="btn-editar"><a href="" class="btn-edit" data-toggle="modal" data-target=".bd-example-modal-lg" >Editar</a></td> -->
                 </tr>
                 <tr>
-                <td><a href="" class="links" data-toggle="modal" data-target=".bd-example-modal-lg">201932644985</a></td>
+                <td><a href="" class="links">201932644985</a></td>
                 <td><p>Sergio Armando
                     <br>
                         <span> Alba Pinedo</span>
@@ -201,7 +233,7 @@
                 <td>Pendiente</td>
                 <td>Feb 22, 2019</td>
                 <td class="lugar-table">Ubr Los Claveles Mz I Lote 9 - Los Naturales</td>
-                <td class="btn-editar"><a href="">Editar</a></td>
+                <!-- <td class="btn-editar"><a href="" class="btn-edit" data-toggle="modal" data-target=".bd-example-modal-lg" >Editar</a></td> -->
                 </tr>
             </tbody>
         </table>
@@ -290,21 +322,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="container">
-                            <div class="butones offset-3 col-md-6">
-                                <div class="row butones">
-                                    <div class="col-md-6">
-                                        <div class="col-12">
-                                            <a href="">Guardar</a>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="col-12">
-                                            <button type="button" data-dismiss="modal">Cancelar</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                        <div class="modal-footer man-mol text-center">
+                            <button type="button" class="btn btn-primary">Guardar</button>
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
                         </div>
                     </form>
                 </div>
@@ -388,21 +408,17 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="container">
-                                <div class="row">
-                                    <div class="offset-5 col-md-6 agregar-platilla">
-                                        <input type="submit" value="Guardar">
-                                        <button type="button"  data-dismiss="modal">Cancelar</button>
-                                    </div>                                              
-                                </div>
-                            </div>
+                            <div class="modal-footer man-mol text-center agregar-platill">
+                                    <button type="button" class="btn btn-primary">Guardar </button>
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                                  </div>
                         </form>
                       </div>
                 </div>
             </div>
         </div>
         <!-- Editar inspeccion -->
-        <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+        <div class="modal fade bd-example-modal-lg-5" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg tamanio-lg">
               <div class="modal-content">
                 <div class="modal-header">
